--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
+mmh3
+tqdm
+nltk
 numpy
 pandas
 polars
+psycopg
+jenkspy
 pyspark
+binascii
+chromadb
 jsonlines
-nltk
-tqdm
+faiss-cpu
 scipy<1.13
 compress-fasttext           # compress-fasttext[full] for advanced tasks
-torch==2.2.*
-sentence-transformers
-faiss-cpu
+# torch==2.2.*
+# sentence-transformers     # non necessario per i test con JOSIE
 # faiss-gpu                 # stricly needs conda, not pyenv
-chromadb
-psycopg
