Updated README.md, aggiornati i parametri  di chiamata per JOSIE.

--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,10 @@ dependencies:
   - psycopg
   - jsonlines
   - pymongo
-  # - timeout_decorator
-  # - bitarray
-  # - datasketch
+  -pip:
+    - timeout_decorator
+    - bitarray
+    - datasketch
+    - fasttext
+    - compress-fasttext
+    - faiss
