multi key join find experiments

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ documentation
 
 models
 notebooks
+!experiments/multi_key_join/josie_find_joins.py
+experiments/multi_key_join
 
 **__pycache__**
 .git
